transfered cards to board page and fixed footer on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,13 @@ ol.myUL {
 }
 
 /*-----------*/
+/*-- Board --*/
+/*-----------*/
+.card {
+  border: transparent;
+}
+
+/*-----------*/
 /*-- Footer --*/
 /*-----------*/
 
@@ -208,34 +215,10 @@ ol.myUL {
 }
 
 .social .sized {
-  height: 4rem;
-  width: 4rem;
-  margin-top: 1rem;
+  height: 3rem;
+  width: 3rem;
 }
 
-@media (max-width: 992px) {
-  /* size reduced to 4rem on medium screens */
-  .social .sized {
-    height: 3rem;
-    width: 3rem;
-  }
-}
-
-@media (max-width: 768px) {
-  /* size reduced to 5rem on small screens */
-  .social .sized {
-    height: 3rem;
-    width: 3rem;
-  }
-}
-
-@media (max-width: 576px) {
-  /* size reduced to 5rem on extra small screens */
-  .social .sized {
-    height: 4.68rem;
-    width: 4.68rem;
-  }
-}
 
 .fa-facebook {
   color: #3b5998;
@@ -318,6 +301,41 @@ figure {
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
     padding: 1rem;
+}
+
+/*--- Bootstrap 5 Column Division ---*/
+.col-xs-15,
+.col-sm-15,
+.col-md-15,
+.col-lg-15 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+
+.col-xs-15 {
+    max-width: 20%;
+    float: left;
+}
+@media (min-width: 768px) {
+.col-sm-15 {
+        max-width: 20%;
+        float: left;
+    }
+}
+@media (min-width: 992px) {
+    .col-md-15 {
+        max-width: 20%;
+        float: left;
+    }
+}
+@media (min-width: 1200px) {
+    .col-lg-15 {
+        max-width: 20%;
+        float: left;
+    }
 }
 
 /*
